# med-assert

./: .dockerignore  .env.example  .env.sample  .gitignore  DECISIONS.md  Dockerfile  README.md  README_API.md  TODO.md  collect.py  docker-compose.yml  pyproject.toml  results.json
deploy/: README.md
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
med_assert_output/: collect.json
scripts/: eval_insight_metrics.py  pubmed_workflow.py
src/article_miner/: __main__.py
src/article_miner/application/: __init__.py  collect_articles.py  insight_job.py  pubmed_ports.py
src/article_miner/application/collect/: __init__.py  ports.py  service.py
src/article_miner/application/dedup/: __init__.py  service.py
src/article_miner/application/insights/: __init__.py  insight_langgraph.py  job.py
src/article_miner/cli/: collect_app.py  dedup_app.py  insight_app.py  pubmed_workflow.py
src/article_miner/cli/collect/: __init__.py  app.py
src/article_miner/cli/dedup/: __init__.py  app.py
src/article_miner/cli/insights/: __init__.py  app.py
src/article_miner/common/: __init__.py  env.py  project_paths.py
src/article_miner/dedup/: engine.py
src/article_miner/domain/: __init__.py  article.py  insight.py
src/article_miner/domain/collect/: __init__.py  models.py
src/article_miner/domain/dedup/: __init__.py
src/article_miner/domain/insights/: __init__.py  models.py
src/article_miner/infrastructure/: __init__.py
src/article_miner/infrastructure/collect/: __init__.py  config.py  esearch_models.py  http_port.py  pubmed_gateway.py  pubmed_xml.py  rate_limiter.py  resilient_http.py
src/article_miner/infrastructure/dedup/: __init__.py  specter_faiss.py
src/article_miner/infrastructure/insights/: __init__.py  canonical_text.py  chat_model_factory.py  insight_cache.py  insight_validation.py  llm_extract.py  prefilter.py  prompts.py  semantic_rules.py
src/article_miner/interfaces/api/: http_app.py  schemas.py
src/article_miner/interfaces/cli/: dedup_app.py  insight_app.py  pubmed_workflow.py
src/med_assert/: __init__.py  __main__.py
src/med_assert/application/: collect_articles.py  insight_job.py  pubmed_ports.py
src/med_assert/application/collect/: __init__.py  ports.py  service.py
src/med_assert/application/dedup/: __init__.py  service.py
src/med_assert/application/insights/: __init__.py  job.py  (+3 more)
src/med_assert/common/: __init__.py  env.py  project_paths.py
src/med_assert/domain/: __init__.py  article.py  errors.py  insight.py
tests/: test_api.py  test_cli.py  test_collect_service.py  test_dedup_engine.py  test_insight_audit.py  test_insight_langgraph.py  test_insight_persistence.py  test_insight_validation.py  test_live_pubmed_collect.py  test_llm_provider_registry.py  test_pubmed_gateway.py  test_pubmed_xml.py  test_resilient_http.py
(+37 files in other folders)
