[project]
name = "article-miner"
version = "0.1.0"
description = "CLI tool to search PubMed and export structured article JSON via NCBI E-utilities"
readme = "README.md"
authors = [
    { name = "vijayaraja", email = "n2nsent@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "litellm>=1.63.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "rapidfuzz>=3.14.3",
    "typer>=0.24.1",
]

[project.scripts]
collect-pubmed = "article_miner.cli.collect.app:run"
find-pubmed-dupes = "article_miner.cli.dedup.app:run"
pubmed-workflow = "article_miner.cli.pubmed_workflow:run"
classify-insights = "article_miner.cli.insights.app:run"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_ncbi: calls real NCBI E-utilities; enable with ARTICLE_MINER_LIVE_NCBI=1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
