[project]
name = "article-miner"
version = "0.1.0"
description = "PubMed collection, duplicate detection (rule-based + optional SPECTER 2 embeddings with FAISS), and LLM insight classification via NCBI E-utilities and LangChain"
readme = "README.md"
authors = [
    { name = "vijayaraja", email = "n2nsent@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.9.0",
    "lxml>=6.0.2",
    "mypy>=1.20.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.3",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
article-miner-api = "article_miner.interfaces.api.app:run"
collect-pubmed = "article_miner.cli.collect.app:run"
find-pubmed-dupes = "article_miner.cli.dedup.app:run"
pubmed-workflow = "article_miner.cli.pubmed_workflow:run"
classify-insights = "article_miner.cli.insights.app:run"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

# SPECTER 2 + FAISS dedup layer (sentence-transformers + PyTorch; large download).
[project.optional-dependencies]
specter = [
    "sentence-transformers>=3.0.0",
    "torch>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_ncbi: calls real NCBI E-utilities; enable with ARTICLE_MINER_LIVE_NCBI=1",
]

[tool.mypy]
exclude = [
    '^tests/',
    '.venv/',
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
